# Arabella

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  check_selenium.sh  codes.md  config.yaml  docker-compose.yml  graph_schema.sql  kuzu_db  main.py  pyproject.toml  pytest.ini  quick_test.sh  requirements.txt  setup.sh  setup_ollama.sh  sites.kuzu  sites.kuzu.wal  team-tasks.md  test.py  test_crawler_simple.py  test_e2e_simple.py  test_embedding_speed.py  test_kuzu_db  test_output.txt  test_querybridge.py  test_wikipedia_simple.py  verify_installation.py
.github/workflows/: ci.yml
crawler/: __init__.py  requests_crawler.py  selenium_crawler.py  test.py  wikipedia_crawler.py
db/: KuzuDB.py  QdrantDB.py  __init__.py
query_bridge/: __init__.py
rag/: __init__.py
scripts/: __init__.py  config.py  init_databases.py
test_vector_db/: meta.json
tests/: conftest.py  test_crawler.py  test_e2e_wikipedia.py  test_kuzu_db.py  test_main.py  test_ollama_embeddings.py  test_qdrant_db.py  test_query_bridge.py  test_rag.py
