[project]
name = "arabella"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.121.1",
    "kuzu>=0.11.3",
    "nltk>=3.9.2",
    "ollama>=0.6.0",
    "pytest>=9.0.0",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "semchunk>=3.2.5",
]
